[package]
name = "bevy_mod_debugdump"
version = "0.15.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["cli", "render_graph"]
cli = ["dep:lexopt"]
render_graph = ["dep:bevy_render"]

[dependencies]
bevy_app = { path = "../../bevy_engine/crates/bevy_app" }
bevy_color = { path = "../../bevy_engine/crates/bevy_color" }
bevy_ecs = { path = "../../bevy_engine/crates/bevy_ecs" }
bevy_log = { path = "../../bevy_engine/crates/bevy_log" }
bevy_platform = { path = "../../bevy_engine/crates/bevy_platform" }
bevy_render = { path = "../../bevy_engine/crates/bevy_render", optional = true }
bevy_utils = { path = "../../bevy_engine/crates/bevy_utils", features = ["debug"] }
disqualified = "1.0"
lexopt = { version = "0.3.0", optional = true }

[dev-dependencies]
bevy = { path = "../../bevy_engine" }

[[example]]
name = "generate_docs"
required-features = ["render_graph"]

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]

# [patch.crates-io]
# bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
# bevy_app = { path = "../bevy/crates/bevy_app" }
# bevy_utils = { path = "../bevy/crates/bevy_utils" }
# bevy_render = { path = "../bevy/crates/bevy_render" }
# bevy = { path = "../bevy" }
